// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generator should generate 1 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "counter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "amount": "%global.counter%",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
            },
            {
              "amount": "1",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$0",
            },
            {
              "amount": "%player.$$0%",
              "kind": "CHANGE_GLOBAL_STAT",
              "mode": "SET",
              "stat": "counter",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [
        "$$0",
      ],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate 2 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "joinCounter",
        "quitCounter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "amount": "%global.joinCounter%",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
            },
            {
              "amount": "1",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$0",
            },
            {
              "amount": "%player.$$0%",
              "kind": "CHANGE_GLOBAL_STAT",
              "mode": "SET",
              "stat": "joinCounter",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
        {
          "actions": [
            {
              "amount": "%global.quitCounter%",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
            },
            {
              "amount": "1",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$1",
            },
            {
              "amount": "%player.$$1%",
              "kind": "CHANGE_GLOBAL_STAT",
              "mode": "SET",
              "stat": "quitCounter",
            },
          ],
          "event": "QUIT",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [
        "$$0",
        "$$1",
      ],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate 3 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "counter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "amount": "%global.counter%",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
            },
            {
              "amount": "1",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$0",
            },
            {
              "amount": "%player.$$0%",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
            },
            {
              "amount": "2",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$1",
            },
            {
              "amount": "%player.$$1%",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$2",
            },
            {
              "amount": "3",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$2",
            },
            {
              "amount": "%player.$$2%",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$3",
            },
            {
              "amount": "4",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$3",
            },
            {
              "amount": "%player.$$3%",
              "kind": "CHANGE_GLOBAL_STAT",
              "mode": "SET",
              "stat": "counter",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [
        "$$0",
        "$$1",
        "$$2",
        "$$3",
      ],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate 4 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "counter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "amount": "%global.counter%",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
            },
            {
              "amount": "1",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$0",
            },
            {
              "amount": "%player.$$0%",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
            },
            {
              "amount": "-1",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$1",
            },
            {
              "amount": "%player.$$1%",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$2",
            },
            {
              "amount": "4",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$2",
            },
            {
              "amount": "%player.$$2%",
              "kind": "CHANGE_GLOBAL_STAT",
              "mode": "SET",
              "stat": "counter",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [
        "$$0",
        "$$1",
        "$$2",
      ],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate 5 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "counter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "amount": "%global.counter%",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
            },
            {
              "amount": "2",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "MULTIPLY",
              "stat": "$$0",
            },
            {
              "amount": "3",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
            },
            {
              "amount": "%player.$$0%",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$1",
            },
            {
              "amount": "%player.$$1%",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$2",
            },
            {
              "amount": "1",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "DECREMENT",
              "stat": "$$2",
            },
            {
              "amount": "%player.$$2%",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$3",
            },
            {
              "amount": "4",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$3",
            },
            {
              "amount": "%player.$$3%",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$4",
            },
            {
              "amount": "5",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$4",
            },
            {
              "amount": "%player.$$4%",
              "kind": "CHANGE_GLOBAL_STAT",
              "mode": "SET",
              "stat": "counter",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [
        "$$0",
        "$$1",
        "$$2",
        "$$3",
        "$$4",
      ],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate 6 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "counter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "amount": "%global.counter%",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
            },
            {
              "amount": "2",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "MULTIPLY",
              "stat": "$$0",
            },
            {
              "amount": "3",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
            },
            {
              "amount": "%player.$$0%",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$1",
            },
            {
              "amount": "%player.$$1%",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$2",
            },
            {
              "amount": "1",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "DECREMENT",
              "stat": "$$2",
            },
            {
              "amount": "%player.$$2%",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$3",
            },
            {
              "amount": "4",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$3",
            },
            {
              "amount": "%player.$$3%",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$4",
            },
            {
              "amount": "5",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$4",
            },
            {
              "amount": "%player.$$4%",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$x",
            },
            {
              "amount": "%player.$x%",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$5",
            },
            {
              "amount": "2",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "MULTIPLY",
              "stat": "$$5",
            },
            {
              "amount": "1",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$6",
            },
            {
              "amount": "%player.$$5%",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$6",
            },
            {
              "amount": "%player.$$6%",
              "kind": "CHANGE_GLOBAL_STAT",
              "mode": "SET",
              "stat": "counter",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [
        "$x",
        "$$0",
        "$$1",
        "$$2",
        "$$3",
        "$$4",
        "$$5",
        "$$6",
      ],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate 7 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "counter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "amount": "1",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$x",
            },
            {
              "amount": "0",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$y",
            },
            {
              "amount": "1",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
            },
            {
              "amount": "%player.$y%",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "DECREMENT",
              "stat": "$$0",
            },
            {
              "amount": "%player.$x%",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
            },
            {
              "amount": "%player.$$0%",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "MULTIPLY",
              "stat": "$$1",
            },
            {
              "amount": "%player.$$1%",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$2",
            },
            {
              "amount": "0",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "MULTIPLY",
              "stat": "$$2",
            },
            {
              "amount": "%player.$$2%",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$3",
            },
            {
              "amount": "1",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$3",
            },
            {
              "amount": "%player.$$2%",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$4",
            },
            {
              "amount": "1",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "MULTIPLY",
              "stat": "$$4",
            },
            {
              "amount": "$$4",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "DECREMENT",
              "stat": "$$3",
            },
            {
              "amount": "%player.$$3%",
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$z",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [
        "$x",
        "$y",
        "$z",
        "$$0",
        "$$1",
        "$$2",
        "$$3",
        "$$4",
      ],
    },
  ],
  "kind": "module",
}
`;
